--- a/css/styles.css
+++ b/css/styles.css
@@ -217,8 +217,10 @@ header .studio {
   display: flex;
 }
 .nav-item {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  position: relative;
+  display: block;
+  /* margin-top: 24px;
+  margin-bottom: 24px;*/
 
   font-weight: 500;
   font-size: 16px;
@@ -230,12 +232,27 @@ header .studio {
 .nav-item:focus {
   color: #404bbf;
 }
+.current {
+  color: #404bbf;
+}
 .nav-list .link {
   padding-top: 24px;
   padding-bottom: 24px;
 }
 .list-item:not(:last-child) {
   margin-right: 40px;
+}
+.current::after {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #404bbf;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: -1px;
+  text-decoration-line: underline;
+  border-radius: 2px;
 }
 .address .list {
   display: flex;
@@ -273,6 +290,8 @@ header .studio {
   height: 600px;
   padding-top: 188px;
   padding-bottom: 188px;
+  margin-left: auto;
+  margin-right: auto;
 
   background-color: var(--secondary-text-color);
   background-image: linear-gradient(
@@ -326,6 +345,42 @@ header .studio {
 .hero-button:hover,
 .hero-button:focus {
   background-color: #404bbf;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(46, 47, 66, 0.7);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-height: 584px;
+  min-width: 408px;
+  padding: 24px;
+
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 3px 0px #0000001f,
+    0px 1px 1px 0px #00000024;
+}
+.modal-button {
+  border-radius: 50%;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h2 {
@@ -397,18 +452,16 @@ h3 {
   /* padding-top: 120px;*/
   padding-bottom: 120px;
 }
-.team-container {
+/*.team-container {
   padding: 32px 0;
-}
+}*/
 .team-container .icons-list {
   display: flex;
   justify-content: center;
   gap: 24px;
   padding-top: 8px;
 }
-/*.icons-list .icon:not(:last-child) {
-  margin-right: 24px;
-}*/
+
 .team-container .icon {
   width: 40px;
   height: 40px;
@@ -444,7 +497,7 @@ h3 {
 }
 .team-list .list-item {
   background-color: #ffffff;
-  width: calc((100% - 72px) / 4);
+  width: 264px;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -463,15 +516,14 @@ h3 {
 }
 .team-list .colleagues {
   text-align: center;
-  margin-bottom: 8px;
+  padding-bottom: 8px;
 }
 .team-list .paragraph {
   color: var(--main-text-color);
   font-size: 16px;
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  margin-bottom: 8px;
 }
 /*.social-networks {
   display: flex;
@@ -485,7 +537,7 @@ h3 {
 }
 .customers {
   text-align: center;
-  line-height: 1.1;
+  line-height: 1.11;
   margin-bottom: 72px;
 }
 .customers-list {
@@ -553,10 +605,10 @@ button:focus {
   padding-top: 96px;
   padding-bottom: 120px;
 }
-.filter .button-item {
+/*.filter .button-item {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+}*/
 .button {
   padding: 12px 24px;
   border: 1xp;
@@ -573,6 +625,32 @@ button:focus {
 .container .button-item:not(:last-child) {
   margin-right: 24px;
 }
+/*Pictures*/
+
+.card {
+  position: relative;
+  width: 360px;
+  height: 300px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #3f51b5;
+
+  transform: translatey(100%);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.pic-item:hover .card-overlay {
+  transform: translatey(0);
+}
 .container .pic-list {
   display: flex;
   flex-wrap: wrap;
@@ -583,6 +661,9 @@ button:focus {
 .container .pic-item {
   margin-right: 24px;
   /*margin-bottom: 48px;*/
+  position: relative;
+  width: 360px;
+  height: 420px;
 }
 .container .pic-item:nth-child(3n) {
   margin-right: 0px;
@@ -590,11 +671,12 @@ button:focus {
 /*.container .pic-item:not(:nth-child(n + 6)) {
   margin-bottom: 48px;*
 }*/
-.pic-item .link {
+
+.pic-item {
   display: block;
 }
-.pic-item .link:hover,
-.pic-item .link:focus {
+.pic-item:hover,
+.pic-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
