--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,9 @@ header .studio {
   text-decoration: none;
   color: var(--accent);
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .sitenav {
   display: flex;
