--- a/css/styles.css
+++ b/css/styles.css
@@ -208,9 +208,6 @@ header .studio {
   text-transform: uppercase;
   text-decoration: none;
   color: var(--accent);
-
-  transition-property: color;
-  transition-duration: 250ms;
 }
 .sitenav {
   display: flex;
@@ -224,7 +221,7 @@ header .studio {
   display: block;
   /* margin-top: 24px;
   margin-bottom: 24px;*/
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   font-weight: 500;
   font-size: 16px;
@@ -282,6 +279,7 @@ header .studio {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact:hover,
 .contact:focus {
@@ -349,6 +347,7 @@ header .studio {
   border-radius: 4px;
 
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -652,6 +651,10 @@ button:focus {
   padding: 12px 24px;
   border: 1xp;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container .button-list {
   display: flex;
@@ -663,12 +666,6 @@ button:focus {
 }
 .container .button-item:not(:last-child) {
   margin-right: 24px;
-}
-.button-item {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*Pictures*/
 
@@ -692,9 +689,30 @@ button:focus {
   transition: transform 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .pic-item:hover .card-overlay {
   transform: translatey(0);
+}
+.picture {
+  position: relative;
+  overflow: hidden;
+}
+.overlay-paragraph {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--button-background-color);
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.overlay-paragraph:focus,
+.overlay-paragraph:hover {
+  transform: translateY(0%);
 }
 .container .pic-list {
   display: flex;
@@ -725,6 +743,12 @@ button:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.pic-item .link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.pic-item .link:hover,
+.pic-item .link:focus {
+}
 .pic-list .pic-text {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -733,6 +757,7 @@ button:focus {
 .pic-list .pic {
   margin-bottom: 8px;
 }
+
 /*Footer*/
 .page-footer .container {
   display: flex;
@@ -798,7 +823,7 @@ footer .studio {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: bakcground-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link:hover,
 .icon-link:focus {
