--- a/css/styles.css
+++ b/css/styles.css
@@ -692,7 +692,7 @@ button:focus {
 .pic-item:hover .card-overlay {
   transform: translatey(0);
 }
-.picture {
+.card .picture {
   position: relative;
   overflow: hidden;
 }
@@ -743,12 +743,13 @@ button:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.pic-item .link {
+.pic-item a {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.pic-item .link:hover,
-.pic-item .link:focus {
-}
+/*.pic-item a:hover,
+.pic-item a:focus {
+  transition: tra;
+}*/
 .pic-list .pic-text {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
