--- a/css/styles.css
+++ b/css/styles.css
@@ -737,6 +737,7 @@ button:focus {
 
 .pic-item {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pic-item:hover,
 .pic-item:focus {
@@ -750,6 +751,9 @@ button:focus {
 .pic-item a:focus {
   transition: tra;
 }*/
+.pic-item .link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .pic-list .pic-text {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
