--- a/css/styles.css
+++ b/css/styles.css
@@ -692,11 +692,11 @@ button:focus {
 .pic-item:hover .card-overlay {
   transform: translatey(0);
 }
-.card .picture {
+.card {
   position: relative;
   overflow: hidden;
 }
-.overlay-paragraph {
+/* .card-overlay .overlay-paragraph {
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -709,7 +709,7 @@ button:focus {
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 .overlay-paragraph:focus,
 .overlay-paragraph:hover {
   transform: translateY(0%);
@@ -727,32 +727,15 @@ button:focus {
   position: relative;
   width: 360px;
   height: 420px;
+  display: block;
 }
 .container .pic-item:nth-child(3n) {
   margin-right: 0px;
-}
-/*.container .pic-item:not(:nth-child(n + 6)) {
-  margin-bottom: 48px;*
-}*/
-
-.pic-item {
-  display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pic-item:hover,
 .pic-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.pic-item a {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-/*.pic-item a:hover,
-.pic-item a:focus {
-  transition: tra;
-}*/
-.pic-item .link {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pic-list .pic-text {
   padding: 32px 16px;
@@ -762,7 +745,6 @@ button:focus {
 .pic-list .pic {
   margin-bottom: 8px;
 }
-
 /*Footer*/
 .page-footer .container {
   display: flex;
