--- a/css/styles.css
+++ b/css/styles.css
@@ -669,13 +669,13 @@ button:focus {
 }
 /*Pictures*/
 
-.card {
+/*.card {
   position: relative;
   width: 360px;
   height: 300px;
   margin: auto;
-  overflow: hidden;
-}
+
+}*/
 
 .card-overlay {
   position: absolute;
@@ -696,7 +696,7 @@ button:focus {
   position: relative;
   overflow: hidden;
 }
-/* .card-overlay .overlay-paragraph {
+/*.overlay-paragraph {
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -709,9 +709,10 @@ button:focus {
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-.overlay-paragraph:focus,
-.overlay-paragraph:hover {
+}
+*/
+.paragraph:focus,
+.paragraph:hover {
   transform: translateY(0%);
 }
 .container .pic-list {
