--- a/css/styles.css
+++ b/css/styles.css
@@ -669,15 +669,14 @@ button:focus {
 }
 /*Pictures*/
 
-/*.card {
+.picture {
   position: relative;
   width: 360px;
   height: 300px;
-  margin: auto;
+  overflow: hidden;
+}
 
-}*/
-
-.card-overlay {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -686,35 +685,22 @@ button:focus {
   background-color: #3f51b5;
 
   transform: translatey(100%);
-  transition: transform 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.pic-item:hover .card-overlay {
+
+.overlay .overlay-paragraph {
+  color: #fff;
+  padding: 10px;
+  font-size: 18px;
+}
+.pic-item:hover .overlay {
   transform: translatey(0);
 }
-.picture {
+.pic-item {
   position: relative;
   overflow: hidden;
 }
-/*.overlay-paragraph {
-  position: absolute;
-  top: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--button-background-color);
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-*/
-.paragraph:focus,
-.paragraph:hover {
-  transform: translateY(0%);
-}
+
 .container .pic-list {
   display: flex;
   flex-wrap: wrap;
