--- a/css/styles.css
+++ b/css/styles.css
@@ -682,24 +682,18 @@ button:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #3f51b5;
+  background-color: #4d5ae5;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--button-background-color);
+  padding: 40px 32px;
 
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/*.overlay .overlay-paragraph {
-  padding: 10px;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--button-background-color);
-}*/
-.pic-item:hover .overlay {
+.pic-item:hover .overlay,
+.pic-item:focus .overlay {
   transform: translatey(0);
 }
 .pic-item {
