--- a/css/styles.css
+++ b/css/styles.css
@@ -691,9 +691,9 @@ button:focus {
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.pic-item:hover .overlay,
-.pic-item:focus .overlay {
-  transform: translatey(0, 0);
+.pic-link:hover .overlay,
+.pic-link:focus .overlay {
+  transform: translatey(0);
 }
 .pic-item {
   position: relative;
